k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: who-is-who
    tier: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: who-is-who-backend
spec:
  selector:
    matchLabels:
      app: who-is-who
      tier: backend
  template:
    metadata:
      labels:
        app: who-is-who
        tier: backend
    spec:
      containers:
        - name: who-is-who-backend
          image: ghcr.io/scout-ch/who-is-who-backend:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /app/data
              name: who-is-who-storage
      volumes:
        - name: who-is-who-storage
          persistentVolumeClaim:
            claimName: who-is-who-data
