k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: who-is-who-frontend
spec:
  type: LoadBalancer
  selector:
    app: who-is-who
    tier: frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: who-is-who-frontend
spec:
  selector:
    matchLabels:
      app: who-is-who
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: who-is-who
        tier: frontend
        track: stable
    spec:
      containers:
        - name: who-is-who-frontend-app
          image: ghcr.io/scout-ch/who-is-who-frontend:latest
          ports:
            - containerPort: 80
