k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: who-is-who
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure # necessary, since we have multiple entrypoints
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt

spec:
  rules:
    - host: who-is-who.scout.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: who-is-who
                port:
                  number: 80
  tls:
    - hosts:
        - who-is-who.scout.ch
